﻿svs 07.05.2015 20:33:44 +0300 - build 4371

1. SQLite 3.8.10

drkns 07.05.2015 16:23:58 +0200 - build 4370

1. В диалоге прогресса копирования отображается количество обработанных байт.

drkns 06.05.2015 22:16:11 +0200 - build 4369

1. И ещё раз.

drkns 06.05.2015 20:26:51 +0200 - build 4368

1. И ещё раз.

drkns 06.05.2015 17:29:36 +0200 - build 4367

1. Пара уточнений 4366.

drkns 06.05.2015 16:39:28 +0200 - build 4366

1. С форума: Авто-дополнение переменных окружения в ком. строке

2. far:config: опция Editor.WordDiv переименована в System.WordDiv.

3. Рефакторинг.

drkns 04.05.2015 14:51:59 +0200 - build 4365

1. Уточнение 4364.

drkns 04.05.2015 14:42:35 +0200 - build 4364

1. С форума: Падение в редакторе при вызове замены текста при [x] Pick up the word
   Попутно немного переделана логика поиска слова в строке.

drkns 01.05.2015 21:11:56 +0200 - build 4363

1. Рефакторинг.

zg 30.04.2015 01:15:07 +0200 - build 4362

1. рефакторинг: обработка нажатий клавиш.

drkns 26.04.2015 13:40:02 +0200 - build 4361

1. Продолжение 4356.

drkns 26.04.2015 03:26:55 +0200 - build 4360

1. Уточнение 4356.

drkns 26.04.2015 01:04:53 +0200 - build 4359

1. Продолжение 4356.

zg 26.04.2015 00:40:10 +0200 - build 4358

1. уточнение 4353.2: Отпускание модификатора может быть воспринято как BreakKey для меню.

drkns 25.04.2015 23:44:26 +0200 - build 4357

1. Уточнение 4356.

drkns 25.04.2015 22:27:47 +0200 - build 4356

1. Рефакторинг.

zg 23.04.2015 12:54:15 +0200 - build 4355

1. уточнение 4352 для FarInputRecordToName.

zg 23.04.2015 02:01:09 +0200 - build 4354

1. уточнение 4345: не работал xlat в редакторе.

zg 22.04.2015 21:26:13 +0200 - build 4353

1. DM_SETMOUSEEVENTNOTIFY переименована в DM_SETINPUTNOTIFY.

2. в DN_INPUT теперь приходят все события консоли.

zg 22.04.2015 14:23:46 +0200 - build 4352

1. уточнение 4337: фар реагирует на отжатия модификаторов. 

drkns 15.04.2015 22:47:32 +0200 - build 4351

1. 0002872: Не ломать кодовую страницу файла FarMenu.ini
